# RL_MiniProject

./: .gitignore  README.md
dev_ws/: cham_docker-compose.yml
dev_ws/src/chamoe_rl/: package.xml  setup.cfg  setup.py
dev_ws/src/chamoe_rl/chamoe_rl/: 6action_graph.py  DQN_agent.py  DQN_gazebo_interface.py  DQN_test.py  Q_agent.py  Q_test.py  RL_environment.py  chamoe_detect.py  depth_visualizer_node.py  result_graph.py
launch/: RL_project_chamoe.launch.py
models/chamoe/: model.config  model.sdf
models/chamoe/meshes/: chamoe.stl
models/chamoe_field/: model.config  model.sdf
models/dirt_plane/: model.config  model.sdf
models/dirt_plane/materials/scripts/: dirt_plane.material
models/turtlebot3_burger_realsense/: model-1_4.sdf  model.config  model.sdf
urdf/: turtlebot3_burger_realsense.urdf
worlds/: chamoe_field.world
