<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>chamoe_rl</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="hyunji7674@gmail.com">root</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <depend>geometry_msgs</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>
  <depend>turtlebot3_msgs</depend>
  <depend>python-keras-pip</depend>
  <depend>python-tensorflow-pip</depend>
  <depend>python-torch-pip</depend>
  <depend>cv_bridge</depend>
  <depend>ultralytics</depend>
  <depend>python3-numpy</depend>
  <depend>python3-opencv</depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
